--- a/index.html
+++ b/index.html
@@ -1,38 +1,24 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="UTF-8">
-  <title>CSS Stylesheets with Relative Paths</title>
+    <meta charset="UTF-8">
+    <title>Christian Wittorp</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-  <header>
-    <h1>Student Bio</h1>
-  </header>
+    <nav class="navbar fixed-top navbar-dark bg-dark">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">Fixed top</a>
+        </div>
+    </nav>
 
-  <div class="container">
 
-    <section id="main-bio">
 
-      <h2>Your Name</h2>
-
-      <img src="https://placehold.it/200x200" alt="Your Name" id="bio-image">
-
-      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
-    </section>
-
-    <section id="contact-info">
-      <h2>Contact Info</h2>
-      <ul>
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-      </ul>
-    </section>
-  </div>
 
 </body>
-
 </html>
