Adding to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,64 @@
         </div>
     </nav>
 
+    <div id="portfolio-hub">
+        <div class="portfolio-set">
+            <div class="port-info">
+                <h2 class="proj-name">Password Generator</h2>
+                <p class="proj-desc">The password generator generates a password given criteria asked through prompts.</p>
+                <p class="info-displayed">This project utilized knowledge in using basic javascript elements(if/else trees, loops, selectors, etc) and integrated that with HTML.</p>
+            </div>
+            <div class="port-gif">
+                <a href="https://github.com/cwwittor/HW03PasswordGenerator"><img src="assets/password-generator.gif" class="proj-img"></a>
+            </div>
+        </div>
+        <hr>
+        <div class="portfolio-set">
+            <div class="port-gif">
+                <a href="https://github.com/cwwittor/hw04-code-quiz"><img src="assets/code-quiz.gif" class="proj-img"></a>
+            </div>
+            <div class="port-info">
+                <h2 class="proj-name">Password Generator</h2>
+                <p class="proj-desc-opposite">The password generator did...</p>
+                <p class="info-displayed-opposite">This project utilized knowledge in...</p>
+            </div>
+        </div>
+        <hr>
+        <div class="portfolio-set">
+            <div class="port-info">
+                <h2 class="proj-name">Password Generator</h2>
+                <p class="proj-desc">The password generator did...</p>
+                <p class="info-displayed">This project utilized knowledge in...</p>
+            </div>
+            <div class="port-gif">
+                <a href="https://github.com/cwwittor/hw05-WorkScheduler"><img src="assets/Work-Scheduler.gif" class="proj-img"></a>
+            </div>
+        </div>
+        <hr>
+        <div class="portfolio-set">
+            <div class="port-gif">
+                <a href="https://github.com/cwwittor/hw06-weather-dashboard"><img src="assets/weather-dashboard.gif" class="proj-img"></a>
+            </div>
+            <div class="port-info">
+                <h2 class="proj-name">Password Generator</h2>
+                <p class="proj-desc-opposite">The password generator did...</p>
+                <p class="info-displayed-opposite">This project utilized knowledge in...</p>
+            </div>
+        </div>
+        <hr>
+        <div class="portfolio-set">
+            <div class="port-info">
+                <h2 class="proj-name">Password Generator</h2>
+                <p class="proj-desc">The password generator did...</p>
+                <p class="info-displayed">This project utilized knowledge in...</p>
+            </div>
+            <div class="port-gif">
+                <a href="https://github.com/cparros/project1"><img src="assets/BlackJack.gif" class="proj-img"></a>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
