added descriptions to items in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,17 +50,17 @@
                 <a href="https://github.com/cwwittor/hw04-code-quiz"><img src="assets/code-quiz.gif" class="proj-img"></a>
             </div>
             <div class="port-info">
-                <h2 class="proj-name">Password Generator</h2>
-                <p class="proj-desc-opposite">The password generator did...</p>
-                <p class="info-displayed-opposite">This project utilized knowledge in...</p>
+                <h2 class="proj-name">Code Quiz</h2>
+                <p class="proj-desc-opposite">The code quiz asks the user a slew of questions with a timer and a scoring system.</p>
+                <p class="info-displayed-opposite">This project utilized knowledge in Javascript by using objects, having multiple different javascript files to pull information from, using different standard JS functions, and making a timer in JS.</p>
             </div>
         </div>
         <hr>
         <div class="portfolio-set">
             <div class="port-info">
-                <h2 class="proj-name">Password Generator</h2>
-                <p class="proj-desc">The password generator did...</p>
-                <p class="info-displayed">This project utilized knowledge in...</p>
+                <h2 class="proj-name">Work Scheduler</h2>
+                <p class="proj-desc">The work scheduler is a scheduler application that saves data to local storage for specific times. The website also has the current date that updates, as well as one-hour time-frames that update with different colors depending on the time of day.</p>
+                <p class="info-displayed">This project utilized the moment API to keep track of time, local storage to save dates, arrays(also 2d arrays) to store data, and logic to determine the time of day with loops.</p>
             </div>
             <div class="port-gif">
                 <a href="https://github.com/cwwittor/hw05-WorkScheduler"><img src="assets/Work-Scheduler.gif" class="proj-img"></a>
@@ -72,17 +72,17 @@
                 <a href="https://github.com/cwwittor/hw06-weather-dashboard"><img src="assets/weather-dashboard.gif" class="proj-img"></a>
             </div>
             <div class="port-info">
-                <h2 class="proj-name">Password Generator</h2>
-                <p class="proj-desc-opposite">The password generator did...</p>
-                <p class="info-displayed-opposite">This project utilized knowledge in...</p>
+                <h2 class="proj-name">Weather Dashboard</h2>
+                <p class="proj-desc-opposite">The weather dashboard displays the current day's weather(temp, humidity, wind speed, UV index) for a searched city along with a 5-day forecast. It also keeps a search history which can be used to search cities.</p>
+                <p class="info-displayed-opposite">This project utilized multiple weather API calls to get various information, creation of front end objects in JS, saving values to local storage, using arrays, and usage of jquery.</p>
             </div>
         </div>
         <hr>
         <div class="portfolio-set">
             <div class="port-info">
-                <h2 class="proj-name">Password Generator</h2>
-                <p class="proj-desc">The password generator did...</p>
-                <p class="info-displayed">This project utilized knowledge in...</p>
+                <h2 class="proj-name">Blackjack Project</h2>
+                <p class="proj-desc">The blackjack project was the first team project I've worked on which allows the user to play blackjack against a dealer. The game will track wins and losses, and there are rules for how to play on the web app.</p>
+                <p class="info-displayed">For this project I mainly worked in the backend. I wrote a very large percentage of the JavaScript used in the web app. From this I displayed knowledge in being able to use 2D arrays, fix multiple bugs, use while/for loops to assign/get values, utilize multiple APIs, interact with front-end elements, and communicate with both back-end and front-end developers.</p>
             </div>
             <div class="port-gif">
                 <a href="https://github.com/cparros/project1"><img src="assets/BlackJack.gif" class="proj-img"></a>
