--- a/contact.html
+++ b/contact.html
@@ -3,29 +3,31 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christian Wittorp</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/Logo2.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
         <div class="container-fluid">
-            <a href="index.html" class="me-auto pull-left navbar-brand"><img src="assets/Logo1.png" class="navImg"></a>
-            <a class="me-auto navbar-brand" href="index.html">Christian Wittorp</a>
-            <button class= "navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class= "navbar-toggler-icon"></span>
+            <a href="index.html" class="mr-auto pull-left navbar-brand"><img src="assets/Logo1.png" class="navImg"></a>
+            <a class="mr-auto navbar-brand" href="index.html">Christian Wittorp</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class ="collapse navbar-collapse" id= "navbarCollapse">
-                <ul class= "navbar-nav ms-auto">
+
+            <div class ="collapse navbar-collapse" id= "navbar">
+                <ul class= "navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" aria-current="page" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
+                        <a class="nav-link" aria-current="page" href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -37,14 +39,35 @@
 
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
 
 
 </body>
 
 <footer>
-    <p>helloooooo</p>
-    <p><a href="assets/Placeholder Resume.pdf">Resume</a></p>
+    <div class ="middlefooter footerfix col-2">
+        <div id="left-info">
+            <p><a href="assets/Placeholder Resume.pdf">Resume</a></p>
+            <p><a href="mailto:cwwittor@ncsu.edu">Email</a></p>
+        </div>
+        <div id="right-info col-2">
+            <p><a href="https://github.com/cwwittor">GitHub</a></p>
+            <p><a href="https://www.linkedin.com/in/christian-wittorp-2341b0142/">LinkedIn</a></p>
+        </div>
+        <p id="Copyright">Copyright© 2021</p>
+
+        <div id="SourceLogo" class="modal">
+            <p>Prasong tadoungsorn is the creator of the glasses logo used for the website as per license attribute requirement.</p>
+
+            <button><a id="modal-close" href="#" rel="modal:close">Close</a></button>
+        </div>
+
+        <a class="modal-style" href="#SourceLogo" rel="modal:open">Logo Sourced Image</a>
+    </div>
+
 </footer>
 
 </html>
