Made the contactME functional

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,12 +105,12 @@
 </body>
 
 <footer>
-    <div class ="middlefooter footerscroll col-2">
+    <div class ="middlefooter footerscroll">
         <div id="left-info">
             <p><a href="assets/Placeholder Resume.pdf">Resume</a></p>
             <p><a href="mailto:cwwittor@ncsu.edu">Email</a></p>
         </div>
-        <div id="right-info col-2">
+        <div id="right-info">
             <p><a href="https://github.com/cwwittor">GitHub</a></p>
             <p><a href="https://www.linkedin.com/in/christian-wittorp-2341b0142/">LinkedIn</a></p>
         </div>
