Aded aboutme and added to design of index

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="frilly">
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
         <div class="container-fluid">
             <a href="index.html" class="mr-auto pull-left navbar-brand"><img src="assets/Logo1.png" class="navImg"></a>
@@ -35,7 +35,7 @@
         </div>
     </nav>
 
-    <div id="contact-box">
+    <section id="contact-box">
         <h2 class="header-contact">Contact Me:</h2>
         <form action="https://formspree.io/f/xgepbzvl" method="POST">
             <div class= "content-box">
@@ -60,7 +60,7 @@
         </form>
 
         
-    </div>
+    </section>
 
 
 
