--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="frilly">
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
         <div class="container-fluid">
             <a href="index.html" class="mr-auto pull-left navbar-brand"><img src="assets/Logo1.png" class="navImg"></a>
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <div id="portfolio-hub">
+    <section id="portfolio-hub">
         <div id="header-Of-Port">
             <h1><u>My Projects</u></h1>
         </div>
@@ -92,7 +92,7 @@
                 <a href="https://cparros.github.io/project1/"><img src="assets/BlackJack.gif" class="proj-img"></a>
             </div>
         </div>
-    </div>
+    </section>
 
 
 
