--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <a href="index.html" class="aboutMePage"><img src="assets/AboutMeTemp.png" class="aboutImage"></a>
+        <a href="aboutme.html" class="aboutMePage"><img src="assets/AboutMeTemp.png" class="aboutImage"></a>
         
         
     </section>
