--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="../src/assets/Logo2.png" />
+  <link rel="icon" href="./src/assets/Logo2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="../src/assets/Logo2.png" />
+  <link rel="apple-touch-icon" href="./src/assets/Logo2.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Merienda&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../src/pages/style.css">
+  <link rel="stylesheet" type="text/css" href="./src/pages/style.css">
 </head>
 
 <body class="frontpage">
